# Experimentation

./: .gitignore  CHANGELOG.md  README.md
Languages/Arduino/PC LED Controller/: .gitignore  CMakeLists.txt  main.cpp
Languages/Arduino/PC LED Controller/BasicComponents/: Makefile
Languages/Arduino/PC LED Controller/BasicComponents/BasicComponents/: library.properties
Languages/Arduino/PC LED Controller/BasicComponents/BasicComponents/examples/Button/: Button.ino
Languages/Arduino/PC LED Controller/BasicComponents/BasicComponents/examples/ButtonTimeout/: ButtonTimeout.ino
Languages/Arduino/PC LED Controller/BasicComponents/BasicComponents/examples/ButtonToggleTimeout/: ButtonToggleTimeout.ino
Languages/Arduino/PC LED Controller/BasicComponents/BasicComponents/examples/LED/: LED.ino
Languages/Arduino/PC LED Controller/BasicComponents/BasicComponents/examples/Timer/: Timer.ino
Languages/Arduino/PC LED Controller/BasicComponents/BasicComponents/src/: BasicComponents.h
Languages/Arduino/PC LED Controller/BasicComponents/BasicComponents/src/BasicComponents/: Button.cpp  Button.hpp  ButtonTimeout.cpp  ButtonTimeout.hpp  LED.cpp  LED.hpp  Timer.cpp  Timer.hpp
Languages/Arduino/PC LED Controller/LED Controller/: CMakeLists.txt  Makefile
Languages/Arduino/PC LED Controller/LED Controller/LEDController/: library.properties
Languages/Arduino/PC LED Controller/LED Controller/LEDController/examples/Oscillator/: Oscillator.ino
Languages/Arduino/PC LED Controller/LED Controller/LEDController/examples/Selectable/: Selectable.ino
Languages/Arduino/PC LED Controller/LED Controller/LEDController/src/: ICommandCLI.hpp  ILEDController.hpp  IPersistentObject.hpp
Languages/Arduino/PC LED Controller/LED Controller/LEDController/src/CommandCLI/: OscillatorCLI.cpp  OscillatorCLI.hpp  SliderCLI.cpp  SliderCLI.hpp  TextToLEDCLI.cpp  TextToLEDCLI.hpp
Languages/Arduino/PC LED Controller/LED Controller/LEDController/src/ControllerManager/: ControllerManager.cpp  ControllerManager.hpp  ControllerModule.hpp
Languages/Arduino/PC LED Controller/LED Controller/LEDController/src/LEDControllers/: Oscillator.cpp  Oscillator.hpp  Slider.cpp  Slider.hpp  SteadyState.cpp  SteadyState.hpp
Languages/Arduino/PC LED Controller/LED Controller/LEDController/src/LEDControllers/TextToLED/: ITextToLEDEncoder.hpp  MorseCodeEncoder.cpp  MorseCodeEncoder.hpp  TapCodeEncoder.cpp  TapCodeEncoder.hpp  TextToLED.cpp  TextToLED.hpp
Languages/Arduino/PC LED Controller/LED Controller/LEDController/src/PersistentObjects/: OscillatorPersistence.cpp  OscillatorPersistence.hpp  SliderPersistence.cpp  SliderPersistence.hpp  TextToLEDPersistence.cpp  TextToLEDPersistence.hpp
Languages/Arduino/PC LED Controller/SerialMonitor/: App.cpp  App.hpp  CMakeLists.txt  IRunnable.hpp  Logger.cpp  Logger.hpp  SerialMonitor.cpp  SerialMonitor.hpp
Languages/Arduino/PC LED Controller/SerialMonitor/SerialPort/: CMakeLists.txt  SerialPort.cpp  SerialPort.h
Languages/Bash/: install.sh  (+2 more)
Languages/C++/Basic/CMake/: CMakeLists.txt
Languages/C++/Basic/CMake/src/: App.cpp  App.hpp  CMakeTutorialConfig.h.in  main.cpp
Languages/C++/Basic/CMake/src/Vector/: CMakeLists.txt  Vector.cpp  Vector.hpp
Languages/Python/Projects/getlib/sfml-2d/: CMakeLists.txt
Languages/Python/Projects/getlib/sfml-2d/source/: main.cpp
(+490 files in other folders)
